--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lonesomedom",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Standalone dom generator",
   "main": "lonesomedom.js",
   "scripts": {
@@ -32,6 +32,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.8.0",
-    "grunt-contrib-uglify": "^0.9.1"
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
