--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Standalone dom generator",
   "main": "index.js",
   "scripts": {
-    "jscs": "jscs --config=node_modules/ivs-jssc/ivs-node.jscsrc index.js",
-    "eslint": "eslint --config=node_modules/ivs-jssc/ivs-browser.eslintrc.js index.js",
-    "checkall": "npm run jscs && npm run eslint"
+    "eslint": "eslint index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +30,6 @@
     "mout": "^1.0.0"
   },
   "devDependencies": {
-    "ivs-jssc": "^2.1.3"
+    "eslint-plugin-ivs": "^1.0.5"
   }
 }
